# brain-overflow

./: Cargo.toml  README.md
backend/: .env  .gitignore  .lsp.lua  AGENTS.md  Cargo.toml  Dockerfile  a.sh  br-ovfl.toml  brain-overflow.toml  docker-compose.brain-overflow.toml  docker-compose.yml  logo  minio-cors.json
backend/.sqlx/: query-0f0cf66d2f9522770077a63096f7a5b0ebc3272703d56050c4135b2909ed1367.json  query-1ea79f4c3fab387cea2384fa86257414d987e1fd05b59c51c37ad01b3d581717.json  query-29e2de8942b6392e76dcfbd27a95a4d58da1845c0285a6875c893d85911bccf0.json  query-31955fedcf08d6a85a70506ca5d66bfa81e87614ea1f12fd89cb78ba2831bf51.json  query-43893031fc36aa2bcad532b6e8d19cfc6475f8e9e8b35191baa176c14d0d1d1c.json  query-5047e3fc0a43a9dd3a2a9aa8a8b796d8a4f6ef10a7ed04dfaf48ca8334fbc7d9.json  query-517f11d8fd5e7e8bdcbb46f9f7e1ee4501a74eb10cd6c0471a6b1fac12a770ab.json  query-5304794dafc471fc57f240aa519c9782882888e70996af962ac312b9a70b5166.json  query-565af17028566d67c995eb2491359563c57bbcc59ef59e00057f943f26d88bd2.json  query-60f75d54226204f791fdf4356b08494a6882259a3908d13d3c9999f60a7d5307.json  query-68be4ccd9f07f06734072e71a4e6fd5bb40daa45b688d113c8b2c431923cf46e.json  query-73d72f461388a079de7b5541f59613ae133b6d734bfc0d7076ee2d97f761186f.json  query-77f476dd88725d87654566836f9448b47a76b54b26048566053433b3ea5114f8.json  query-8875eed4638d81807445171cc3ceef09866e33a00681263d0b3626302c26a643.json  query-8a8b0c63354e5d160f58d0b7c7a8a22b66ca5e0253e5de2974eddb7a98488ae9.json  query-96d4043d2ec6356345903fa0ff16d14bad2e9bd1b9b55420ae4a5042d66049eb.json  query-a1d9f42ed961e8acc91d9165ca74ae90c05b9524bb049c01573d2e50e586dc7e.json  query-a53a887fcbc070cd61def090ddb303f0e3e5519595a8976e52c0173f73ff4e4e.json  query-b8fa2e93783ccc53a6a7bd5b1c1df81360bf177c478b9335b3b9acd1a5014b4a.json  query-bc152960a570035594876ecb109b3b6c497383b1b2221c7b962495316be30aaa.json  query-d80427618db1e541039751e4615824fae89505a7748e4e5e0dfad86eaf164e8e.json  query-dba76849d5a8a285d120997472f7c38b84e95790aa22ba90b0bd30b58c999487.json  query-e3b8a3007f77035caec5d82068dbd29c504e27cdabb9f53b2fde5cab989d9c65.json  query-e3d0fc9d94340cc0df0ed76de1fc4c56d78628b72e8036d316b9cf726002f557.json  query-f21f75b75c7c47e0d09e9453f1d8456058c6852b46a0a867108113dc303a5723.json  query-fcad00fb277d6770ca8501fef44f762f92d8abf7bfdd1bcc6ac6ea4236e60436.json  query-ffd73001672f63e9c2522969fb8ba4452ce376ab0cc1b692d416f47a933b1041.json
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: error.rs  lib.rs
backend/crates/auth/tests/: integration_test.rs
backend/sql/: create-db.sql
backend/sql/ddl/: asset.sql  asset_reset.sql  init.sql  reset.sql  usr.sql  usr_reset.sql
backend/sql/dml/: usr.sql
backend/sql/dql/: article.sql  usr.sql
backend/sql/setup/: usr.sql
backend/src/: app_config.rs  cli.rs  database.rs  db.rs  entity.rs  error.rs  http.rs  logger.rs  main.rs  redis.rs  server.rs  util.rs
backend/src/app_config/: auth.rs  crab_vault.rs  db.rs  email.rs  logger.rs  mod.rs  redis.rs  s3.rs  server.rs  util.rs  utils.rs
backend/src/entity/: article.rs  asset.rs  mod.rs  page.rs  user.rs  usr.rs
backend/src/entity/user/: user_info.rs  user_profiles.rs
backend/src/entity/usr/: mod.rs  prelude.rs  user_profiles.rs  usr_info.rs
backend/src/error/: api.rs  auth.rs  cli.rs  db.rs  fatal.rs  request.rs
backend/src/http/: api.rs  auth.rs  extractor.rs  jwt.rs  mod.rs  services.rs  utils.rs
backend/src/http/api/: article.rs  asset.rs  mod.rs  user.rs  usr.rs  webhook.rs
backend/src/http/api/user/: bio.rs  danger_zone.rs  info.rs  login.rs  refresh.rs  signup.rs
backend/src/http/api/usr/: bio.rs  danger_zone.rs  delete.rs  delete_account.rs  info.rs  login.rs  mod.rs  signup.rs
backend/src/http/extractor/: prelude.rs  user.rs  utils.rs
backend/src/http/middelware/: auth.rs
backend/src/http/middleware/: auth.rs
backend/src/http/services/: crab_vault.rs
backend/src/logger/: json.rs  pretty.rs
frontend/: .env.development  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/api/: crab-vault.js  info.js  login.js  userLogin.js  userProfiles.js  userVerify.js
frontend/src/components/: LoginButton.vue  PanelCard.vue  UserAvatar.vue
frontend/src/layout/: index.vue
frontend/src/layout/components/: AppHeader.vue  AppRightPanel.vue  AppSidebar.vue
frontend/src/router/: index.js
frontend/src/router/modules/: editArticle.js  login.js  main.js  notFound.js  user.js
frontend/src/store/: index.js
frontend/src/store/user/: user.js
frontend/src/stores/: index.js
frontend/src/stores/modules/: user.js  userAsset.js
frontend/src/styles/: common.css  common.less
frontend/src/utils/: request.js
frontend/src/views/: login.vue  main.vue
frontend/src/views/404/: index.vue
frontend/src/views/edit-article/: index.vue
frontend/src/views/layout/: LayoutContainer.vue
frontend/src/views/login/: index.vue  (+3 more)
src/: main.rs
(+11 files in other folders)
