[package]
name = "auth"
version = "0.0.1"
edition = "2024"

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
